--- a/css/resume.css
+++ b/css/resume.css
@@ -43,15 +43,26 @@ table {
 }
 /* ----------------reset css end---------------- */
 *{
-    font-family: 'Source Sans Pro','Noto Sans TC';
     text-decoration: none;
+}
+body{
+    font-family: 'Helvetica','Noto Sans TC';
+    background-color: #F9F9F9;
 }
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 65px;
-    /* background-color: rgb(244, 244, 244); */
+    background-color: #ffffff;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    transition: top 0.4s ease-in-out;
+    z-index: 500;
+}
+.hideClose header {
+    top: -65px;
 }
 .logo{
     margin-left: 100px;
@@ -127,13 +138,17 @@ header{
     position: relative;
     margin-right: 100px;
     width: 100%;
-    max-width: 200px;
-    font-size: 14px;
-    font-weight: 600;
+    max-width: 180px;
+    font-size: 13.5px;
 }
+.link_no_color a{
+    color: #a8a8a8;
+    font-weight: 500;
+}
+.logo a:hover,
 .nav a:hover{
     color: #727272;
-    border-bottom: 1px solid #d0d0d0;
+    transition: 0.3s;
 }
 
 @media screen and (max-width: 768px) {
@@ -177,6 +192,7 @@ header{
     .nav a{
         font-size: 25px;
         color: #fff;
+        font-weight: 900;
     }
 }
 
@@ -203,11 +219,15 @@ header{
     color: #606060;
 }
 #resume h2{
+    font-size: 18px;
     margin-top: 30px;
+    font-weight: 500;
 }
 .text-right h3{
     color: #3A3A3A;
     margin-top: 15px;
+    font-weight: 500;
+    font-size: 15px;
 }
 #resume ul{
     margin: 10px auto;
@@ -234,19 +254,20 @@ header{
 
 
 
-
+/* ----------------footer---------------- */
 footer{
     position: fixed;
     bottom: 15px;
-    right: 25px;
+    left: 25px;
     font-size: 12px;
-    font-weight: 600;
 }
 @media screen and (max-width: 768px) {
     footer{
         position: static;
-        line-height: 30px;
-        background-color: rgb(238, 238, 238);
+        line-height: 50px;
+        /* background-color: rgb(238, 238, 238); */
         text-align: center;
+        font-weight: 500;
+        color: #3a3a3a;
     }
 }
